--- a/public/locales/da.json
+++ b/public/locales/da.json
@@ -11,6 +11,7 @@
     "captchaRequired": "Bekræft venligst, at du ikke er en robot."
   },
   "reviewFunnel": {
+    "title": "Skriv en anmeldelse",
     "thankYou": "Tak for din fantastiske anmeldelse!",
     "askGMB": "Vil du dele den på Google og hjælpe andre med at finde os?",
     "leaveOnGoogle": "Skriv en Google-anmeldelse",
