Added i18n translations to a few pages

--- a/public/locales/da.json
+++ b/public/locales/da.json
@@ -21,11 +21,259 @@
     "appreciate": "Vi sætter pris på, at du tog dig tid til at hjælpe os med at forbedre vores service.",
     "ratingRequired": "Vælg venligst en vurdering."
   },
-
   "contactCTA": {
     "imageAlt": "Christian Gefke",
     "heading": "Få den juridiske støtte du fortjener",
     "description": "Uanset om du flytter, investerer eller har brug for pålidelig rådgivning, er jeg her for at guide dig hele vejen. Lad os tale om, hvordan jeg kan bruge min erfaring til at hjælpe dig.",
     "button": "KONTAKT MIG"
+  },
+  "reviews": {
+    "title": "Skriv en anmeldelse"
+  },
+  "about": {
+    "heroTitle": "Om mig",
+    "heroSubtitle": "Spansk advokat / abogado",
+    "metaTitle": "Om mig | Christian Gefke – Spansk Advokat",
+    "metaDescription": "Mød Christian Gefke, en autoriseret spansk advokat med juridisk ekspertise og international baggrund. Få professionel rådgivning om fast ejendom, erhverv og privatretten i Spanien.",
+    "intro": "Mit navn er Christian Gefke, og jeg er en autoriseret advokat (medlemsnummer 635 ved Advokatsammenslutningen på Lanzarote) med en solid uddannelse og omfattende erfaring inden for jura. Jeg blev født i Aarhus, Danmark, men voksede op på Lanzarote, de Kanariske Øer.",
+    "introEnglish": "Spanish lawyer in Aarhus – Christian Gefke is an officially registered abogado with the Colegio de Abogados de Lanzarote (No. 635). He provides expert legal assistance in Spanish property law, inheritance, family law, contracts, and cross-border matters for clients in Denmark and Spain. Fully verified in the CGAE national lawyer registry, he offers reliable guidance for anyone needing a Spanish lawyer in Aarhus or legal help related to Spain.",
+    "education": "Jeg har en jurauuddannelse fra Universitetet i Las Palmas de Gran Canaria, hvorfra jeg besidder min viden inden for de juridiske områder. Derefter afsluttede jeg en kandidatuddannelse på Universidad Internacional de la Rioja (UNIR), hvor jeg specialiserede mig i erhvervelse af fast ejendom. I 2022 bestod jeg den nationale advokatprøve som afholdes årligt af det spanske justitsministerium, hvilket gav mig ret til optagelse i en lokal advokatforening – en nødvendig betingelse i Spanien for at føre sager i retten.",
+    "career": "Gennem min karriere har jeg haft mulighed for at arbejde med flere prominente virksomheder, såsom Grupo Stier, en af de førende aktører i havnen i Las Palmas, samt Grupo Martinez inden for fast ejendom og detailhandel i Spanien. Derudover har jeg samarbejdet med en bred vifte af uafhængige konsulenter, revisorer, økonomer og advokater.",
+    "passion": "Min passion for jura opstår primært i privatretten, hvor denne som en udviklende realitet medbringer vigtige lektioner, når samfundet præsenteres for nye udfordringer – hvad enten det drejer sig om nye teknologier eller gamle institutioner med nye særpræg.",
+    "closing": "Jeg er her for at tilbyde dig juridisk rådgivning af høj kvalitet og hjælpe dig med at navigere i den komplekse juridiske verden med tillid og sikkerhed.",
+    "backgroundTitle": "Min juridiske baggrund",
+    "background2012": "2012 – 2017:",
+    "background2012Text": "LLB/Bachelor i jura ved ULPGC",
+    "background2017": "2017 – 2018:",
+    "background2017Text": "Stier Group og BG Abogados jurist i praktik",
+    "background2019": "2019 – idag:",
+    "background2019Text": "Selvstændig rådgiver – primært i Barcelona og de Kanariske Øer",
+    "background2021": "2021 – 2023:",
+    "background2021Text": "LLM/Kandidat i jura ved UNIR",
+    "background2022": "2022 – 2023:",
+    "background2022Text": "Grupo Martinez i advokatpraktik/fuldmægtig",
+    "background2022b": "2022 – 2023:",
+    "background2022bText": "Titel Advokat – bestået den nationale statseksamen for advokater afholdt af det spanske justitsministerium"
+  },
+  "workInSpain": {
+    "metaTitle": "Arbejde i Spanien – Hvad danskere skal vide | Christian Gefke",
+    "metaDescription": "Læs hvad du som dansker skal vide om arbejdsret, dokumentation og rettigheder ved arbejde i Spanien.",
+    "ogTitle": "Arbejde i Spanien – Hvad danskere skal vide",
+    "ogDescription": "Få styr på dokumenter, rettigheder og sociale bidrag som dansker, der arbejder i Spanien.",
+    "title": "Arbejde i Spanien: Hvad du skal vide som dansker",
+    "subtitle": "Få styr på registrering, rettigheder og social sikring som dansk arbejdstager eller selvstændig i Spanien.",
+    "section1Title": "1. Dokumentation og registrering for danskere",
+    "section1Text": "Som EU-borger kan du bo og arbejde i Spanien uden visum. Men ved ophold over 90 dage skal du registreres:",
+    "section1Item1Label": "Certifikat for EU-registrering (grønt NIE-dokument):",
+    "section1Item1Text": "Dit NIE-nummer bruges i alle arbejds- og skatteforhold.",
+    "section1Subtitle": "Fordele ved NIE-registrering:",
+    "section1Item2": "Lovligt arbejde som lønmodtager eller selvstændig",
+    "section1Item3": "Adgang til offentlig sundhedspleje",
+    "section1Item4": "Sociale ydelser som pension og dagpenge",
+    "section1Item5": "Folkeregistertilmelding (empadronamiento)",
+    "section2Title": "2. Socialforsikring og bidrag",
+    "section2Text": "Før du starter arbejde i Spanien, skal du tilmeldes Tesorería General de la Seguridad Social (TGSS).",
+    "section2Subtitle": "Hvad dækker sociale bidrag?",
+    "section2Item1": "Sygesikring og hospitalsbehandling",
+    "section2Item2": "Arbejdsløshedsunderstøttelse",
+    "section2Item3": "Barsels- og sygedagpenge",
+    "section2Item4": "Pension og invalideydelser",
+    "section2Item5": "Familieydelser",
+    "section2Text2": "Du betaler ca. 6,35 % af din løn – arbejdsgiveren betaler op mod 30 % ekstra.",
+    "section3Title": "3. Arbejdsløshedsunderstøttelse (paro)",
+    "section3Text": "Du har ret til understøttelse fra SEPE, hvis du:",
+    "section3Item1": "Ikke selv har sagt op",
+    "section3Item2": "Har arbejdet og bidraget i min. 360 dage de sidste 6 år",
+    "section3Item3": "Er registreret som aktivt jobsøgende",
+    "section3Item4": "Har lovligt ophold i Spanien",
+    "section4Title": "4. Dine rettigheder som arbejdstager",
+    "section4Text": "Som ansat i Spanien har du følgende grundlæggende rettigheder:",
+    "section4Item1": "Skriftlig og lovlig ansættelseskontrakt",
+    "section4Item2": "Betalt ferie og helligdage",
+    "section4Item3": "Beskyttelse mod uberettiget fyring",
+    "section4Item4": "Ret til faglig repræsentation og overenskomster",
+    "section4Item5": "Gratis adgang til arbejdsretlige domstole",
+    "section5Title": "5. Arbejde som selvstændig (autónomo)",
+    "section5Text": "Ønsker du at være freelancer eller drive virksomhed, skal du registreres som autónomo:",
+    "section5Item1": "Registrering hos skat og socialforsikring",
+    "section5Item2": "Månedligt bidrag (ca. 230 €/md. i 2025)",
+    "section5Item3": "Kvartalsvis indberetning af indtægter og udgifter",
+    "section5Item4": "Adgang til sundhed, pension og dagpenge",
+    "conclusionTitle": "Konklusion: Arbejd trygt i Spanien",
+    "conclusionText1": "Som dansk statsborger kan du arbejde lovligt og med fulde rettigheder i Spanien – både som lønmodtager og selvstændig.",
+    "conclusionText2": "Sørg for at få styr på NIE-registrering, socialforsikring og korrekt ansættelse fra starten.",
+    "conclusionText3": "Har du spørgsmål eller brug for vejledning? Kontakt mig – jeg rådgiver danske arbejdstagere og selvstændige i hele Spanien."
+  },
+  "skat": {
+    "metaTitle": "Skatterådgivning i Spanien for danskere | Juridisk hjælp",
+    "metaDescription": "Forstå forskellen på skattepligt som residente og ikke-residente i Spanien. Få styr på spansk skat, formularer og optimer din situation som dansker i Spanien.",
+    "title": "Skat i Spanien: Hvad udlændinge skal vide om beskatning, bopæl og skattepligt",
+    "subtitle": "Et overblik over spansk skat for danskere, uanset om du bor, arbejder eller investerer i Spanien.",
+    "intro1": "At bo, arbejde eller investere i Spanien medfører skattemæssige forpligtelser. Det er afgørende at forstå, om du er",
+    "intro1Strong1": "skattemæssigt hjemmehørende (residente)",
+    "intro1Text": "eller",
+    "intro1Strong2": "ikke-hjemmehørende (no residente)",
+    "intro2": "Denne artikel giver dig indsigt i",
+    "intro2Strong": "spansk skattesystem",
+    "intro2Text": ", forskellen på direkte og indirekte skatter, samt hvad skattemæssig bopæl betyder.",
+    "section1Title": "1. Det spanske skattesystem – overblik",
+    "section1Text": "Fastlagt i",
+    "section1Strong": "Ley General Tributaria (lov 58/2003)",
+    "section1Text2": ", administreres skatter på nationalt, regionalt og lokalt niveau:",
+    "section1Item1Label": "Direkte skatter:",
+    "section1Item1Text": "indkomst, formue, arv/gaver.",
+    "section1Item2Label": "Indirekte skatter:",
+    "section1Item2Text": "forbrug, fx moms og afgifter.",
+    "section2Title": "2. Skattepligt – er du residente?",
+    "section2Text": "Skattepligt i Spanien afhænger af, om du betragtes som",
+    "section2Strong": "skattemæssigt hjemmehørende (residente)",
+    "section2Subtitle": "Hvornår er du residente? (jf. IRPF-lovens artikel 9)",
+    "section2Item1": "Ophold i Spanien i mere end 183 dage om året",
+    "section2Item2": "Økonomisk og familiemæssigt centrum i Spanien",
+    "section2Item3": "Ægtefælle og/eller børn bosat i Spanien",
+    "section2Subtitle2": "Konsekvenser som residente:",
+    "section2Item4": "Skattepligt af global indkomst",
+    "section2Item5": "Selvangivelse via IRPF",
+    "section2Item6": "Fradragsmuligheder og sociale ydelser",
+    "section2Item7": "Indsendelse af Modelo 720 ved udenlandske aktiver",
+    "section2Subtitle3": "Konsekvenser som ikke-residente:",
+    "section2Item8": "Skat kun af spansk indkomst og aktiver",
+    "section2Item9": "Beskatning via IRNR",
+    "section2Item10": "Begrænsede fradrag og undtagelser",
+    "section2Item11": "Krav om skatterepæsentant uden for EU/EØS",
+    "section3Title": "3. Direkte skatter i Spanien",
+    "section3Subtitle1": "a) IRPF – Indkomstskat for residente",
+    "section3Item1": "Gælder for alle residente",
+    "section3Item2": "Progressiv sats:",
+    "section3Item2Strong": "19 % – 47 %+",
+    "section3Item3": "Omfatter løn, pension, udlejning, kapitalindkomst, m.m.",
+    "section3Subtitle2": "b) IRNR – Skat for ikke-residente",
+    "section3Item4Strong": "24 %",
+    "section3Item4Text": "for personer uden for EU/EØS",
+    "section3Item5Strong": "19 %",
+    "section3Item5Text": "for personer fra EU/EØS",
+    "section3Item6": "Gælder spansk indkomst: leje, pension, udbytte mv.",
+    "section3Subtitle3": "c) Formueskat",
+    "section3Item7": "Residente: global formue. Ikke-residente: spanske aktiver.",
+    "section3Item8": "Fritagelse op til 700.000 € (regionalt varieret)",
+    "section3Item9": "Madrid fritager helt – Katalonien opkræver",
+    "section3Subtitle4": "d) Arv og gaveafgift",
+    "section3Item10": "Bopæl og aktivernes placering afgør skatten",
+    "section3Item11": "Store regionale forskelle",
+    "section4Title": "4. Indirekte skatter",
+    "section4Subtitle1": "a) Moms (IVA)",
+    "section4Item1": "Almindelig sats:",
+    "section4Item1Strong": "21 %",
+    "section4Item2": "Reduceret sats:",
+    "section4Item2Strong": "10 %",
+    "section4Item3": "Superreduceret sats:",
+    "section4Item3Strong": "4 %",
+    "section4Subtitle2": "b) Afgift på ejendom og dokumenter",
+    "section4Item4": "Gælder brugte boliger og notartransaktioner",
+    "section4Item5": "Sats:",
+    "section4Item5Strong": "6 % – 10 %",
+    "section4Item5Text": "afhængig af region",
+    "section4Subtitle3": "c) Punktafgifter",
+    "section4Item6": "På fx alkohol, tobak og brændstof",
+    "section5Title": "5. Ejendom i Spanien – Skatter og gebyrer",
+    "section5Item1": "Skat af lejeindtægter eller beregnet lejeværdi",
+    "section5Item2": "Lokal ejendomsskat",
+    "section5Item2Strong": "IBI",
+    "section5Item3": "Ved salg: gevinstskat +",
+    "section5Item3Strong": "3 % tilbageholdelse",
+    "section5Text": "Spanien og Danmark har en",
+    "section5Strong": "dobbeltbeskatningsoverenskomst",
+    "section5Text2": ", som forhindrer dobbeltskat.",
+    "section6Title": "6. Centrale skatteformularer",
+    "section6Item1Strong": "Modelo 030",
+    "section6Item1Text": "– registrering hos spansk SKAT",
+    "section6Item2Strong": "Modelo 210",
+    "section6Item2Text": "– for ikke-residente (fx udlejning)",
+    "section6Item3Strong": "Modelo 100",
+    "section6Item3Text": "– årlig selvangivelse (IRPF)",
+    "section6Item4Strong": "Modelo 720",
+    "section6Item4Text": "– oplysning om udenlandske aktiver",
+    "section6Item5Strong": "Certificado de residencia fiscal",
+    "section6Item5Text": "– skattebopælsbevis",
+    "conclusionTitle": "Konklusion: Få styr på din skat – og undgå dyre overraskelser",
+    "conclusionText1": "Det spanske skattesystem er komplekst og adskiller sig væsentligt fra det danske. At vide, om du er residente eller ej, er nøglen til korrekt skatteplanlægning.",
+    "conclusionText2": "Juridisk skatterådgivning er afgørende for at undgå fejl, bøder og overbeskatning.",
+    "conclusionText3": "Overvejer du at flytte, investere eller arbejde i Spanien? Kontakt os i dag for professionel skattegennemgang og rådgivning på dansk."
+  },
+  "startVirksomhed": {
+    "metaTitle": "At starte virksomhed i Spanien: Filial, selskab eller selvstændig?",
+    "metaDescription": "Få overblik over de tre mest almindelige måder at starte virksomhed i Spanien: filial, spansk selskab (S.L./S.A.) eller som selvstændig (autónomo).",
+    "ogTitle": "At starte virksomhed i Spanien: Filial, selskab eller selvstændig?",
+    "ogDescription": "Guide til etablering af virksomhed i Spanien: vælg mellem filial, spansk selskab (S.L./S.A.) eller som selvstændig erhvervsdrivende.",
+    "twitterTitle": "At starte virksomhed i Spanien: Filial, selskab eller selvstændig?",
+    "twitterDescription": "Overvej filial, S.L. eller autónomo – vi guider dig gennem virksomhedsetablering i Spanien.",
+    "title": "At starte virksomhed i Spanien: Filial, selskab eller selvstændig?",
+    "subtitle": "En komplet guide til etablering af virksomhed i Spanien – vi gennemgår fordele og krav ved filial, spansk selskab og selvstændig virksomhed.",
+    "section0Title": "Tre typiske måder at starte virksomhed",
+    "section0Item1": "Som filial af en udenlandsk virksomhed",
+    "section0Item2": "Som spansk selskab (S.L. eller S.A.)",
+    "section0Item3": "Som selvstændig (autónomo)",
+    "section1Title": "1. Opret en filial af et udenlandsk selskab",
+    "section1Text": "Har du allerede virksomhed i Danmark, kan du åbne en filial i Spanien. Det er en forlængelse af moderselskabet og kræver:",
+    "section1Item1": "Registrering i Registro Mercantil",
+    "section1Item2": "Udnævnelse af juridisk repræsentant",
+    "section1Item3": "Spansk skattenummer (NIF)",
+    "section1Item4": "Officielle oversættelser af selskabsdokumenter",
+    "section1Item5": "Tilmelding til Seguridad Social ved ansatte",
+    "section1Subtitle": "Fordele ved filial:",
+    "section1Item6": "Let adgang til det spanske marked",
+    "section1Item7": "Styrket tillid fra kunder og myndigheder",
+    "section1Item8": "Mulighed for EU- og nationale tilskud",
+    "section2Title": "2. Opret et spansk selskab (S.L. eller S.A.)",
+    "section2Text": "Den mest almindelige selskabsform er",
+    "section2Strong": "S.L.",
+    "section2Text2": ", svarende til et dansk ApS. S.A. bruges primært af større virksomheder.",
+    "section2Subtitle": "Sådan opretter du et S.L.:",
+    "section2Item1": "Reserver virksomhedsnavn (Registro Mercantil Central)",
+    "section2Item2": "Åbn spansk bankkonto og indskyd minimum 3.000 €",
+    "section2Item3": "Udarbejd vedtægter og underskriv hos notar",
+    "section2Item4": "Registrér selskabet i Registro Mercantil",
+    "section2Item5": "Få NIF og tilmeld til Agencia Tributaria",
+    "section2Subtitle2": "Skat og forpligtelser:",
+    "section2Item6": "Selskabsskat: 25 %",
+    "section2Item7": "Moms (IVA): typisk 21 %",
+    "section2Item8": "Årsregnskab og løbende indberetninger",
+    "section3Title": "3. Arbejd som selvstændig (autónomo)",
+    "section3Text": "Den hurtigste og mest fleksible løsning er at blive autónomo – ideelt for freelancere, konsulenter og små selvstændige.",
+    "section3Subtitle": "Krav og trin:",
+    "section3Item1": "Få NIE og spansk adresse",
+    "section3Item2": "Registrér dig hos Agencia Tributaria (036/037)",
+    "section3Item3": "Tilmeld dig Seguridad Social (RETA-ordningen)",
+    "section3Item4": "Indsend kvartalsvis moms og forskudsskat",
+    "section3Subtitle2": "Omkostninger og skatter:",
+    "section3Item5": "Månedligt bidrag: ca. 230 €",
+    "section3Item6": "IRPF (personskat): ca. 20 % af overskud",
+    "section3Item7": "Moms (21 %), hvis du leverer momspligtige ydelser",
+    "section4Title": "Sammenligning af modeller",
+    "tableHeader1": "Form",
+    "tableHeader2": "Kapitalkrav",
+    "tableHeader3": "Hæftelse",
+    "tableHeader4": "Skat",
+    "tableHeader5": "Formål",
+    "tableRow1Col1": "Filial",
+    "tableRow1Col2": "Ingen",
+    "tableRow1Col3": "Moderselskabet hæfter",
+    "tableRow1Col4": "IRNR / selskabsskat",
+    "tableRow1Col5": "Høj",
+    "tableRow2Col1": "S.L.",
+    "tableRow2Col2": "3.000 €",
+    "tableRow2Col3": "Begrænset",
+    "tableRow2Col4": "Selskabsskat (25 %)",
+    "tableRow2Col5": "Mellem",
+    "tableRow3Col1": "Autónomo",
+    "tableRow3Col2": "Ingen",
+    "tableRow3Col3": "Ubegrænset",
+    "tableRow3Col4": "IRPF (20 %)",
+    "tableRow3Col5": "Lav",
+    "conclusionTitle": "Konklusion: Find den rigtige model for dig",
+    "conclusionText": "Uanset om du ønsker at udvide en dansk virksomhed, starte en ny i Spanien eller arbejde som selvstændig, findes der en løsning. Med den rette rådgivning undgår du fejl og sparer tid.",
+    "conclusionText2": "Har du spørgsmål om etablering i Spanien?",
+    "conclusionLink": "Kontakt os i dag",
+    "conclusionText3": "– vi hjælper dig sikkert i gang."
   }
 }
